Api bugs fixed (falta revisar carrito)